// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnRotation snapshots should render ColumnRotation 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Rotation
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="angle"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="angle"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="angle"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="protractor"
                height="8"
                name="Protractor"
                width="8"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="angle"
              maxlength="6"
              type="text"
              value="0°"
            />
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Rotation
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp ButtonGroup ButtonGroup--full-width"
          data-test-button-group="layout-position"
        >
          <div
            class="ButtonGroup__button"
            data-test-button-group-input="toggle-rotate"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon Icon Icon--neutral-1"
              data-test-icon="toggle-rotate"
              height="12"
              name="ToggleRotate"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Rotate 90° right
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <div
            class="ButtonGroup__button"
            data-test-button-group-input="flip-horizontal"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon Icon Icon--neutral-1"
              data-test-icon="flip-horizontal"
              height="12"
              name="FlipHorizontal"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Flip horizontal  ⇧H
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <div
            class="ButtonGroup__button"
            data-test-button-group-input="flip-vertical"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon Icon Icon--neutral-1"
              data-test-icon="flip-vertical"
              height="12"
              name="FlipVertical"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Flip vertical  ⇧V
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnRotation snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Rotation
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="angle"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="angle"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="angle"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="protractor"
                height="8"
                name="Protractor"
                width="8"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="angle"
              maxlength="6"
              type="text"
              value="Mixed"
            />
          </div>
        </div>
        <div
          class="Tooltip"
        >
          <div
            class="Tooltip__content"
          >
            Rotation
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp ButtonGroup ButtonGroup--full-width"
          data-test-button-group="layout-position"
        >
          <div
            class="ButtonGroup__button"
            data-test-button-group-input="toggle-rotate"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon Icon Icon--neutral-1"
              data-test-icon="toggle-rotate"
              height="12"
              name="ToggleRotate"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Rotate 90° right
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <div
            class="ButtonGroup__button"
            data-test-button-group-input="flip-horizontal"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon Icon Icon--neutral-1"
              data-test-icon="flip-horizontal"
              height="12"
              name="FlipHorizontal"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Flip horizontal  ⇧H
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <div
            class="ButtonGroup__button"
            data-test-button-group-input="flip-vertical"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon Icon Icon--neutral-1"
              data-test-icon="flip-vertical"
              height="12"
              name="FlipVertical"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Flip vertical  ⇧V
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
